@@ -1,0 +1,3 @@
+Site URL: https://watcherotic.com/
+Contact: https://watcherotic.com/
+DMCA: https://watcherotic.com/dmca/
