@@ -20,6 +20,7 @@ import re
 import json
 import xbmc
 import xbmcgui
+import time
 from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
@@ -27,7 +28,8 @@ from resources.lib.sites.spankbang import Playvid
 
 site = AdultSite('erogarga', '[COLOR hotpink]EroGarga[/COLOR]', 'https://www.erogarga.com/', 'erogarga.png', 'erogarga')
 site1 = AdultSite('fulltaboo', '[COLOR hotpink]FullTaboo[/COLOR]', 'https://fulltaboo.tv/', 'fulltaboo.png', 'fulltaboo')
-site2 = AdultSite('koreanpm', '[COLOR hotpink]Korean PornMovie[/COLOR]', 'https://koreanpornmovie.com/', 'https://koreanpornmovie.com/wp-content/uploads/2020/05/tt.png', 'koreanpm')
+site2 = AdultSite('koreanpm', '[COLOR hotpink]Korean PornMovie[/COLOR]', 'https://koreanpornmovie.com/', 'https://koreanpornmovie.com/wp-content/uploads/2025/01/sadasdasdasdas.png', 'koreanpm')
+site3 = AdultSite('watcherotic', '[COLOR hotpink]WatchErotic[/COLOR]', 'https://watcherotic.com/', 'https://watcherotic.com/contents/fetrcudmeesb/theme/logo.png', 'watcherotic')
 
 
 def getBaselink(url):
@@ -37,18 +39,25 @@ def getBaselink(url):
         siteurl = site1.url
     elif 'koreanpornmovie.com' in url:
         siteurl = site2.url
+    elif 'watcherotic.com' in url:
+        siteurl = site3.url
     return siteurl
 
 
 @site.register(default_mode=True)
 @site1.register(default_mode=True)
 @site2.register(default_mode=True)
+@site3.register(default_mode=True)
 def Main(url):
     siteurl = getBaselink(url)
     if 'erogarga' in siteurl:
         site.add_dir('[COLOR hotpink]Categories[/COLOR]', siteurl, 'Cat', site.img_cat)
-    site.add_dir('[COLOR hotpink]Search[/COLOR]', siteurl + '?s=', 'Search', site.img_search)
-    List(siteurl + '?filter=latest')
+    if 'watcherotic' in siteurl:
+        site.add_dir('[COLOR hotpink]Search[/COLOR]', siteurl + 'search/', 'Search', site.img_search)
+        List(siteurl + 'latest-updates/')
+    else:
+        site.add_dir('[COLOR hotpink]Search[/COLOR]', siteurl + '?s=', 'Search', site.img_search)
+        List(siteurl + '?filter=latest')
 
 
 @site.register()
@@ -56,14 +65,17 @@ def List(url):
     siteurl = getBaselink(url)
     listhtml = utils.getHtml(url, siteurl)
     html = listhtml.split('>SHOULD WATCH<')[0]
+    if 'There is no data in this list' in html.split('New Albums')[0]:
+        utils.notify(msg='No data found')
+        return
 
-    delimiter = 'article data-video-uid'
+    delimiter = 'article data-video-uid|<div class="thumb thumb_rel item'
     re_videopage = 'href="([^"]+)"'
     re_name = 'title="([^"]+)"'
-    re_img = 'data-src="([^"]+)"'
-    re_duration = 'fa-clock-o"></i>([^<]+)<'
-    re_quality = 'class="hd-video">(HD)<'
-    skip = 'type-photos'
+    re_img = '(?:data-src|data-original)="([^"]+)"'
+    re_duration = '(?:fa-clock-o"></i>|class="time">)([^<]+)<'
+    re_quality = 'class="(?:hd-video|qualtiy)">(HD)<'
+    skip = '(Magazine)' if 'watcherotic' in siteurl else 'type-photos'
 
     cm = []
     cm_lookupinfo = (utils.addon_sys + "?mode=erogarga.Lookupinfo&url=")
@@ -72,19 +84,36 @@ def List(url):
     cm.append(('[COLOR deeppink]Related videos[/COLOR]', 'RunPlugin(' + cm_related + ')'))
     utils.videos_list(site, 'erogarga.Play', html, delimiter, re_videopage, re_name, re_img, re_duration=re_duration, re_quality=re_quality, contextm=cm, skip=skip)
 
-    re_npurl = 'href="([^"]+)"[^>]*>Next' if '>Next' in html else 'class="current".+?href="([^"]+)"'
-    re_npnr = r'/page/(\d+)[^>]*>Next' if '>Next' in html else r'class="current".+?rel="follow">(\d+)<'
-    re_lpnr = r'/page/(\d+)[^>]*>Last' if '>Last' in html else r'rel="follow">(\d+)<\D+<\/main>'
-    utils.next_page(site, 'erogarga.List', html, re_npurl, re_npnr, re_lpnr=re_lpnr, contextm='erogarga.GotoPage')
+    if 'watcherotic' in siteurl:
+        match = re.search(r'''class="active[^>]+>([^<]+)<.+?class='next' href=\S+\sdata-action="ajax" data-container-id="[^"]+"\s+data-block-id="([^"]+)"\s+data-parameters="([^"]+)">''', listhtml, re.DOTALL | re.IGNORECASE)
+        if match:
+            npage = int(match.group(1)) + 1
+            block_id = match.group(2)
+            params = match.group(3).replace(';', '&').replace(':', '=')
+            tm = int(time.time() * 1000)
+            nurl = url.split('?')[0] + '?mode=async&function=get_block&block_id={0}&{1}&_={2}'.format(block_id, params, str(tm))
+            nurl = nurl.replace('+from_albums', '')
+            nurl = re.sub(r'&from([^=]*)=\d+', r'&from\1={}'.format(npage), nurl)
+
+            cm_page = (utils.addon_sys + "?mode=erogarga.GotoPage" + "&url=" + urllib_parse.quote_plus(nurl) + "&np=" + str(npage) + "&list_mode=erogarga.List")
+            cm = [('[COLOR violet]Goto Page #[/COLOR]', 'RunPlugin(' + cm_page + ')')]
+
+            site.add_dir('[COLOR hotpink]Next Page...[/COLOR] (' + str(npage) + ')', nurl, 'List', site.img_next, contextm=cm)
+    else:
+        re_npurl = 'href="([^"]+)"[^>]*>Next' if '>Next' in html else 'class="current".+?href="([^"]+)"'
+        re_npnr = r'/page/(\d+)[^>]*>Next' if '>Next' in html else r'class="current".+?rel="follow">(\d+)<'
+        re_lpnr = r'/page/(\d+)[^>]*>Last' if '>Last' in html else r'rel="follow">(\d+)<\D+<\/main>'
+        utils.next_page(site, 'erogarga.List', html, re_npurl, re_npnr, re_lpnr=re_lpnr, contextm='erogarga.GotoPage')
     utils.eod()
 
 
 @site.register()
-def GotoPage(list_mode, url, np, lp):
+def GotoPage(list_mode, url, np, lp=0):
     dialog = xbmcgui.Dialog()
     pg = dialog.numeric(0, 'Enter Page number')
     if pg:
         url = url.replace('/page/{}'.format(np), '/page/{}'.format(pg))
+        url = url.replace('from={}'.format(np), 'from={}'.format(pg))
         if int(lp) > 0 and int(pg) > int(lp):
             utils.notify(msg='Out of range!')
             return
@@ -109,7 +138,10 @@ def Search(url, keyword=None):
     if not keyword:
         site.search_dir(url, 'Search')
     else:
-        url = "{0}{1}".format(url, keyword.replace(' ', '%20'))
+        if 'watcherotic' in url:
+            url = "{0}{1}/".format(url, keyword.replace(' ', '-'))
+        else:
+            url = "{0}{1}".format(url, keyword.replace(' ', '%20'))
         List(url)
 
 
@@ -121,17 +153,34 @@ def Play(url, name, download=None):
 
     if 'koreanporn' in url:
         vp = utils.VideoPlayer(name, download=download)
-        match = re.compile(r'<source src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(videohtml)
+        match = re.compile(r'<iframe src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(videohtml)
         if match:
-            videourl = match[0] + '|Referer={}'.format(siteurl)
-            vp.play_from_direct_link(videourl)
+            html = utils.getHtml(match[0], url)
+            match = re.compile(r'<source src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(html)
+            vp.play_from_direct_link(match[0] + '|referer=' + url)
         return
 
-    vp = utils.VideoPlayer(name, download=download, regex='"file":"([^"]+)"')
+    vp = utils.VideoPlayer(name, download=download, regex='"file":"([^"]+)"', direct_regex='file:"([^"]+)"')
     match = re.compile(r'''<iframe[^>]+src=['"]([^'"]+)['"]''', re.DOTALL | re.IGNORECASE).findall(videohtml)
 
     playerurl = match[0]
-    if 'phixxx.cc/player/play.php?vid=' in playerurl:
+
+    if vp.resolveurl.HostedMediaFile(playerurl).valid_url():
+        vp.play_from_link_to_resolve(playerurl)
+        return
+    elif 'klcams.com' in playerurl:
+        videohtml = utils.getHtml(playerurl, url)
+
+        match = re.compile(r'<iframe src="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(videohtml)
+        videolink = match[0]
+        hdr = utils.base_hdrs.copy()
+        hdr['Sec-Fetch-Dest'] = 'iframe'
+        klhtml = utils.getHtml(videolink, 'https://klcams.com/', headers=hdr, error=True)
+        packed = utils.get_packed_data(klhtml)
+
+        vp.play_from_html(packed, videolink)
+        return
+    elif 'phixxx.cc/player/play.php?vid=' in playerurl:
         vid = playerurl.split('?vid=')[-1]
         posturl = 'https://phixxx.cc/player/ajax_sources.php'
         formdata = {'vid': vid, 'alternative': 'spankbang', 'ord': '0'}
@@ -180,8 +229,6 @@ def Play(url, name, download=None):
     if 'spankbang' in videolink:
         videolink = videolink.replace('/embed/', '/video/')
         Playvid(videolink, name, download=download)
-    elif vp.resolveurl.HostedMediaFile(videolink).valid_url():
-        vp.play_from_link_to_resolve(videolink)
     else:
         vp.play_from_direct_link(videolink)
 
